v11 color token updates for radio button component (#2325)
* v11 color token updates for radio button component

This PR updates the color tokens on the Style tab for the radio button component.

* Update style.mdx

changed border-inverse to icon-primary

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/src/pages/components/radio-button/style.mdx
+++ b/src/pages/components/radio-button/style.mdx
@@ -8,23 +8,23 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-| Class                                   | Property         | Color token |
-| --------------------------------------- | ---------------- | ----------- |
-| `.bx--label`                            | text color       | `$text-02`  |
-| `.bx--radio-button__label`              | text color       | `$text-01`  |
-| `.bx--radio-button__appearance`         | border           | `$ui-05`    |
-| `.bx--radio-button__appearance`         | background-color | `$ui-01`    |
-| `.bx--radio-button__appearance:checked` | border           | `$ui-05`    |
-| `.bx--radio-button__appearance::before` | dot              | `$ui-05`    |
+| Class                                   | Property         | Color token        |
+| --------------------------------------- | ---------------- | ------------------ |
+| `.bx--label`                            | text color       | `$text-secondary`  |
+| `.bx--radio-button__label`              | text color       | `$text-primary`    |
+| `.bx--radio-button__appearance`         | border           | `$icon-primary`    |
+| `.bx--radio-button__appearance`         | background-color | `$background`      |
+| `.bx--radio-button__appearance:checked` | border           | `$icon-primary`    |
+| `.bx--radio-button__appearance::before` | dot              | `$icon-primary`    |
 
 ### Interactive colors
 
-| Class                                    | Property   | Color token    |
-| ---------------------------------------- | ---------- | -------------- |
-| `.bx--radio-button__appearance:focus`    | border     | `$focus`       |
-| `.bx--label:disabled`                    | text color | `$disabled-02` |
-| `.bx--radio-button__label:disabled`      | text color | `$disabled-02` |
-| `.bx--radio-button__appearance:disabled` | border     | `$disabled-02` |
+| Class                                    | Property   | Color token      |
+| ---------------------------------------- | ---------- | ---------------- |
+| `.bx--radio-button__appearance:focus`    | border     | `$focus`         |
+| `.bx--label:disabled`                    | text color | `$text-disabled` |
+| `.bx--radio-button__label:disabled`      | text color | `$text-disabled` |
+| `.bx--radio-button__appearance:disabled` | border     | `$icon-disabled` |
 
 ## Typography
 
