v11 color token updates for select component (#2341)
* v11 color token updates for select component

This PR updates the color tokens on the Style tab for the select component.

* change background to field

changed background to fields and deleted light variant

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/src/pages/components/select/style.mdx
+++ b/src/pages/components/select/style.mdx
@@ -12,15 +12,14 @@ Inputs come in two different colors. The default input color is `$field-01` and
 is used on `$ui-background` and `$ui-02` page backgrounds. The `--light` version
 input color is `$field-02` and is used on `$ui-01` page backgrounds.
 
-| Class                 | Property   | Color toke  |
-| --------------------- | ---------- | ----------- |
-| `.bx--select-input`   | background | `$field-01` |
-| `.bx--select--light`  | background | `$field-02` |
-| `.bx--select--inline` | background | transparent |
-| `.bx--label`          | text color | `$text-01`  |
-| `.bx--select-input`   | text color | `$text-01`  |
-| `.bx--select--inline` | text color | `$icon-01`  |
-| `.bx--select__arrow`  | fill       | `$icon-01`  |
+| Class                 | Property   | Color token                 |
+| --------------------- | ---------- | --------------------------- |
+| `.bx--select-input`   | background | `$field`                    |
+| `.bx--select--inline` | background | transparent                 |
+| `.bx--label`          | text color | `$text-primary`             |
+| `.bx--select-input`   | text color | `$text-primary`             |
+| `.bx--select--inline` | text color | `$icon-primary`             |
+| `.bx--select__arrow`  | fill       | `$icon-primary`             |
 
 <div className="image--fixed">
 
@@ -32,13 +31,13 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 
 ### Interaction states
 
-| Class                             | Property   | Color token    |
-| --------------------------------- | ---------- | -------------- |
-| `.bx--select-input:focus`         | border     | `$focus`       |
-| `.bx--select-input[data-invalid]` | border     | `$support-01`  |
-| `.bx--form-requirement`           | text color | `$support-01`  |
-| `.bx--select-input:disabled`      | background | `$disabled-01` |
-| `.bx--select-input:disabled`      | text color | `$disabled-02` |
+| Class                             | Property   | Color token            |
+| --------------------------------- | ---------- | ---------------------- |
+| `.bx--select-input:focus`         | border     | `$focus`               |
+| `.bx--select-input[data-invalid]` | border     | `$support-error`       |
+| `.bx--form-requirement`           | text color | `$support-error`       |
+| `.bx--select-input:disabled`      | background | `$field-disabled`      |
+| `.bx--select-input:disabled`      | text color | `$text-disabled`       |
 
 **Open:** Style determined by browser
 
